form submission results for pick up in Mercado  are OK

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -163,9 +163,10 @@
 
                     <!-- ========== LEVANTAR ========= -->
             <section class="pick-up-sec border-1">
-                <h5 name="Local de Levantamento: ">
+                <h5>
                     Onde preferes levantar a tua encomenda?
                 </h5>
+                <input type="hidden"  name="Local de Levantamento:">
                 <div>
                     <input id="praca" type="radio" name="local" value="Mercado" checked>
                     <div class="mercado">
