add background-images and change colors

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
-    <link rel="stylesheet" href="/stylesheet/produtos.css">
+    <!-- <link rel="stylesheet" href="/stylesheet/produtos.css"> -->
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
 
@@ -92,6 +92,7 @@
         
         </section>
 
+        <!-- <span class="circle"></span> -->
         <!-- ABOUT US SECTION -->
 
         <section class="about-us">
