--- a/html/cabaz-um.html
+++ b/html/cabaz-um.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
-    <link rel="stylesheet" href="/stylesheet/produtos.css">
+    <!-- <link rel="stylesheet" href="/stylesheet/produtos.css"> -->
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
