--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
-    <link rel="stylesheet" href="/stylesheet/produtos.css">
+    <!-- <link rel="stylesheet" href="/stylesheet/produtos.css"> -->
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
@@ -145,7 +145,7 @@
             </div>
     
             <div class="contact social-media">
-                <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
+                <a href="callto:+351914547465"><i class="fa-solid fa-phone"></i></a>
                 <div class="info-tel">
                     <span class="call-cost">914 547 465</span>
                     <span class="call-cost">Custo chamada nacional</span>
