add another page when the user submit the order/cart form

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -20,7 +20,6 @@
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <!-- <script  src="\scriptDocs/ervasECha.js" defer></script> -->
     <script type="text/javascript" src="/script.js" defer></script>
-
     <script type="text/javascript" src="/scriptDocs/advancePageOne.js" defer></script>
 
     <title>Preenchimento dados - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -69,8 +68,8 @@
     </header>
 
     <section class="client-data-sec">
-
-        <form class="cart-form" name="hortaDaRiaEncomenda" action="/html/success.html" method="POST" data-netlify="true"> 
+        <!-- ADD ACTION  -->
+        <form class="cart-form" name="hortaDaRiaEncomenda" action="" method="POST" data-netlify="true"> 
         <input type="hidden" name="subject" value="Nova Encomenda" id="newMessage" data-remove-prefix>
         
 
@@ -247,7 +246,6 @@
                 <input type="hidden" name="Cesto" id="cartContent">
                 <input type="hidden" name="valorAPagar" id="totalPriceToPayId">
             </div>
-            
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
@@ -255,7 +253,6 @@
 
             <!-- BUTTON SUBMIT -->
             <button type="submit" class="send-user-data-btn" disabled>
-                <!-- <a href="/html/success.html">Avançar</a> -->
                 Avançar
             </button>
 
