--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -69,7 +69,7 @@
 
     <section class="client-data-sec">
         <!-- ADD ACTION  -->
-        <form class="cart-form" name="hortaDaRiaEncomenda" action="" method="POST" data-netlify="true"> 
+        <form class="cart-form" name="hortaDaRiaEncomenda" action="/html/orderSentPage.html" method="POST" data-netlify="true"> 
         <input type="hidden" name="subject" value="Nova Encomenda" id="newMessage" data-remove-prefix>
         
 
