change login icon and start basket historic page

--- a/html/orderSentPage.html
+++ b/html/orderSentPage.html
@@ -88,15 +88,19 @@
                 <i class="fa-solid fa-seedling"></i>
             </a>
         </div>
-        <div class="login"><i class="fa-solid fa-user"></i></div>
+        <div class="">
+            <a href="/html/basketHistoric.html">
+                <i class="fa-solid fa-inbox"></i>
+            </a>
+        </div>
     </section>
         
-    <section class="thankYou">
+    <section class="thankYouOrder">
 
         <div class="thankYouMessage">
             <span>Enviado com Sucesso!</span><br>
             <i class="fa-regular fa-paper-plane animate__animated animate__fadeInBottomLeft"></i><br>
-            <p>Obrigado pela tua encomenda 
+            <p>Obrigado pela tua encomenda<br>
                 <span class="client-Name"></span>!
             </p>
             <p>Em breve, entraremos em contacto contigo!</p>
