--- a/html/ovos.html
+++ b/html/ovos.html
@@ -83,8 +83,12 @@
                 <i class="fa-solid fa-seedling"></i>
             </a>
         </div>
-        <div class="login"><i class="fa-solid fa-user"></i></div>
-    </section>
+        <div class="">
+            <a href="/html/basketHistoric.html">
+                <i class="fa-solid fa-inbox"></i>
+            </a>
+        </div>
+        </section>
 
     <!-- ITEM ADDED TO CART -->
     <div class="alert"></div>
