--- a/html/plantasEmVaso.html
+++ b/html/plantasEmVaso.html
@@ -44,8 +44,8 @@
                     </a>
                     <span class="article-number"></span>
                 </div>
-
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
+
                 <!-- <i class="fa-solid fa-x"></i>  fa-bars-staggered  -->
             </div>
         </nav>
@@ -81,8 +81,12 @@
                 <i class="fa-solid fa-seedling"></i>
             </a>
         </div>
-        <div class="login"><i class="fa-solid fa-user"></i></div>
-    </section>
+        <div class="">
+            <a href="/html/basketHistoric.html">
+                <i class="fa-solid fa-inbox"></i>
+            </a>
+        </div>
+        </section>
 
     <!-- ITEM ADDED TO CART -->
     <div class="alert"></div>
