--- a/html/produtos.html
+++ b/html/produtos.html
@@ -86,7 +86,11 @@
                     <i class="fa-solid fa-seedling"></i>
                 </a>
             </div>
-            <div class="login"><i class="fa-solid fa-user"></i></div>
+            <div class="">
+                <a href="/html/basketHistoric.html">
+                    <i class="fa-solid fa-inbox"></i>
+                </a>
+            </div>
         </section>
 
         <!--  LIST OF ALL ITEMS TO SELL -->
