--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -68,6 +68,8 @@
 
     </header>
 
+    <div class="backgroundColor"></div>
+
      <!-- ITEM ADDED TO CART -->
      <div class="alert"></div>
 
@@ -114,7 +116,11 @@
                     <i class="fa-solid fa-seedling"></i>
                 </a>
             </div>
-            <div class="login"><i class="fa-solid fa-user"></i></div>
+            <div class="">
+                <a href="/html/basketHistoric.html">
+                    <i class="fa-solid fa-inbox"></i>
+                </a>
+            </div>
         
         </section>
 
