--- a/html/verduras.html
+++ b/html/verduras.html
@@ -84,7 +84,11 @@
                 <i class="fa-solid fa-seedling"></i>
             </a>
         </div>
-        <div class="login"><i class="fa-solid fa-user"></i></div>
+        <div class="">
+            <a href="/html/basketHistoric.html">
+                <i class="fa-solid fa-inbox"></i>
+            </a>
+        </div>
     </section>
 
     <!-- ITEM ADDED TO CART -->
