apply zoom image on basketHistoric

--- a/html/basketHistoric.html
+++ b/html/basketHistoric.html
@@ -90,15 +90,13 @@
     <!-- ITEM ADDED TO CART -->
     <div class="alert"></div>
 
+    <div class="zoom-div"></div>
+
     <!-- watch js document -->
     <section class="historic-images">
-
         <h4>
-            Apresentamos-te todos os nossos cabazes feitos até à data para que possas saciar a tua curiosidade.
-        </h4>
-
-        
-        
+            Apresentamos-te alguns dos nossos cabazes feitos até à data para que possas saciar a tua curiosidade.
+        </h4>    
     </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
