fix errors and change some colors and backgrounds

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -253,7 +253,7 @@
 
             <!-- BUTTON SUBMIT -->
             <button type="submit" class="send-user-data-btn" disabled>
-                Avançar
+                Encomendar
             </button>
 
         </form>
@@ -349,7 +349,7 @@
            
             <div class="webDevSp">
                 <a href="mailto:simaaoweb@gmail.com">
-                    <p class="my-name"><span class="designBy">Design by </span>SP</p>
+                    <p class="my-name"><span class="designBy">Created by </span>Simão Pedro</p>
                 </a>
             </div>
         </section>
