--- a/html/cabaz-um.html
+++ b/html/cabaz-um.html
@@ -148,7 +148,7 @@
        
         <div class="webDevSp">
             <a href="mailto:simaaoweb@gmail.com">
-                <p class="my-name"><span class="designBy">Design by </span>SP</p>
+                <p class="my-name"><span class="designBy">Created by </span>Simão Pedro</p>
             </a>
         </div>
     </section>
