--- a/html/produtos.html
+++ b/html/produtos.html
@@ -80,7 +80,11 @@
                     <i class="fa-solid fa-house"></i>
                 </a>
             </div>
-            <div class="info"><i class="fa-solid fa-info"></i></div>
+            <div class="info">
+                <a href="/html/informations.html">
+                    <i class="fa-solid fa-info"></i>
+                </a>
+            </div>
             <div class="criar-cabaz">
                 <a href="/html/produtos.html">
                     <i class="fa-solid fa-seedling"></i>
@@ -239,7 +243,7 @@
            
             <div class="webDevSp">
                 <a href="mailto:simaaoweb@gmail.com">
-                    <p class="my-name"><span class="designBy">Design by </span>SP</p>
+                    <p class="my-name"><span class="designBy">Created by </span>Simão Pedro</p>
                 </a>
             </div>
         </section>
