--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -319,7 +319,7 @@
             </div>
     
             <div class="contact social-media">
-                <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
+                <a href="callto:+351914547465"><i class="fa-solid fa-phone"></i></a>
                 <div class="info-tel">
                     <span class="call-cost">914 547 465</span>
                     <span class="call-cost">Custo chamada nacional</span>
