--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
            
             <div class="webDevSp">
                 <a href="mailto:simaaoweb@gmail.com">
-                    <p class="my-name"><span class="designBy">Design by </span>SP</p>
+                    <p class="my-name"><span class="designBy">Design by </span>Simão Pedro</p>
                 </a>
             </div>
 
