colors and backgrounds changed

--- a/html/informations.html
+++ b/html/informations.html
@@ -96,6 +96,15 @@
     <section class="informations-sec">
        
         <div class="come-see-us">
+            <h3>Encomendas</h3>
+            <p> Só aceitamos encomendas de a 2ª a 4ª feira.
+                Pelo que tens até ás 23:59h de cada 4ªa feira para a fazeres.
+                Caso não consigas fazer a tua encomenda dentro desse tempo, por favor, 
+                entra em contacto connosco.   
+            </p>
+        </div>
+
+        <div class="come-see-us">
             <h3>Vem Visitar-nos</h3>
             <p> Sabias que estámos todos os sábados na Praça Mercado de 
                 V. N. Famalicão?
