added function that limit orders
now the client only can made an order between monday and wednesday. Because that is the time permited by owners.

Changed some style too.

added an message on top of the pages in the day when orders aren't permited.

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -13,6 +13,7 @@
     <!-- <link rel="stylesheet" href="/stylesheet/produtos.css"> -->
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
 
@@ -37,6 +38,10 @@
                 <a href="\index.html">
                     <img src="\images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
                 </a>
+            </div>
+
+            <div class="disable-orders">
+                <h4>Ecomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
@@ -104,20 +109,21 @@
 
             <div class="about-us-div">
                 <div class="about-us-photo">
-                    <img src="\images/farmView.jpeg" alt="">
+                    <img src="/images/owners-1.jpg" alt="">
                 </div>
 
                 <div class="about-us-description">
                     <h3>Quem somos nós?</h3>
-                    <p>Eu sou o Francisco tenho 34 anos e sou de Vila Nova de Famalicão. Tirei o curso técnico de informática no 12º ano e já há 15 anos que faço reparações numa empresa. 
-                        O gosto pela agricultura despultouse em março de 2021 quando começei a ajudar o Tiago aos fins de semana. Mais tarde, para dedicar mais tempo à horta, passei de full-time para part-time, 
-                        na empresa onde era técnico de informática.
-                        Com essa mudança consegui atingir o objectivo de produzir a minha propria comida, aumentar o contacto com a natureza e por sua vez um estilo de vida mais saudável.
-                    </p>
                     <p>
-                        Eu sou o Tiago, tenho 37 anos e também sou natural de Vila Nova de Famalicão. Sou formado e pós-graduado em artes e design de joalharia. Exerci essa profissão uns anos, até que comecei
+                        Eu sou o Tiago, tenho 37 anos e sou natural de Vila Nova de Famalicão. Sou formado e pós-graduado em artes e design de joalharia. Exerci essa profissão uns anos, até que comecei
                         a ganhar mais interesse e gosto pela natureza. Esse gosto fez com que eu fosse capaz de produzir a minha própria comida.
                         O que começou como um hooby, surge em 2020 como a horta d'Ria, um projecto pequeno em tamanho mas grande em qualidade e vontade em estarmos constantemente a aprender. 
+                    </p>
+                    <p>
+                        Eu sou o Francisco tenho 34 anos e também sou de Vila Nova de Famalicão. Tirei o curso técnico de informática no 12º ano e já há 15 anos que faço reparações numa empresa. 
+                        O gosto pela agricultura surge em março de 2021 quando começei a ajudar o Tiago aos fins de semana. Mais tarde, para dedicar mais tempo à horta, passei de full-time para part-time, 
+                        na empresa onde era técnico de informática.
+                        Com essa mudança consegui atingir o objectivo de produzir a minha propria comida, aumentar o contacto com a natureza e por sua vez um estilo de vida mais saudável.
                     </p>
                     <p>
                         O Francisco juntou-se à equipa cerca de um ano depois. Os nossos ideais são sempre trabalhar com a natureza e não contra. Temos práticas sustentáveis, agroecológicas e regenerativas. Damos 
