--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/carrinho.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
@@ -38,6 +39,10 @@
                 <a href="\index.html">
                     <img src="\images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
                 </a>
+            </div>
+
+            <div class="disable-orders">
+                <h4>Ecomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
