--- a/html/basketHistoric.html
+++ b/html/basketHistoric.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/basketHistoric.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="/scriptDocs/basketHistoric.js"></script>
     <script type="text/javascript" src="/script.js" defer></script>
@@ -34,6 +36,10 @@
                 <a href="/index.html" rel="noopener noreferrer">
                     <img src="/images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
                 </a>    
+            </div>
+
+            <div class="disable-orders">
+                <h4>Ecomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
