--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/testemunhos.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
 
@@ -42,6 +42,10 @@
                 <a href="\index.html">
                     <img src="\images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
                 </a>
+            </div>
+
+            <div class="disable-orders">
+                <h4>Ecomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
