--- a/html/verduras.html
+++ b/html/verduras.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
     <script type="text/javascript" src="/scriptDocs/verduras.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
@@ -37,6 +39,10 @@
                 <a href="/index.html" rel="noopener noreferrer">
                     <img src="/images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
                 </a>    
+            </div>
+
+            <div class="disable-orders">
+                <h4>Ecomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
