--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/testemunhos.css">
     <meta name="google-site-verification" content="fG5KQroNX36_63dnQaTQEBEGgJNf0-74G9XbwX3rN8U">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
 
@@ -40,6 +40,10 @@
 
             <div class="logo-img-div">
                 <img src="images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
+            </div>
+
+            <div class="disable-orders">
+                <h4>Ecomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
@@ -65,7 +69,7 @@
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
             <a href="#"> <li>Fotos</li></a>
-            <a href="#Videos"><li>Videos</li></a>
+            <a href="/html/videos.html"><li>Videos</li></a>
         </ul>
 
     </header>        
