--- a/html/informations.html
+++ b/html/informations.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/informations.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
@@ -39,6 +40,10 @@
                 <a href="/index.html" rel="noopener noreferrer">
                     <img src="/images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
                 </a>    
+            </div>
+
+            <div class="disable-orders">
+                <h4>Ecomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
