--- a/html/basketHistoric.html
+++ b/html/basketHistoric.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+se<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -63,7 +63,7 @@
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
             <a href="#"> <li>Fotos</li></a>
-            <a href="#Videos"><li>Videos</li></a>
+            <a href="/html/videos.html"><li>Videos</li></a>
         </ul>
 
     </header>
