--- a/html/horticulas.html
+++ b/html/horticulas.html
@@ -66,7 +66,7 @@
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
             <a href="#"> <li>Fotos</li></a>
-            <a href="#Videos"><li>Videos</li></a>
+            <a href="/html/videos.html"><li>Videos</li></a>
         </ul>
 
     </header>
