update advancePage form
now the user see an animation if the name, email or other input isn't valid

--- a/html/videos.html
+++ b/html/videos.html
@@ -106,8 +106,8 @@
         
         </section>
 
-        <!-- TESTEMUNHOS -->
-        <!-- WATCH testimonials.js -->
+        <!-- VIDEOS -->
+     
 
         <section class="video">
             <video controls width="350" autoplay>
