--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -150,7 +150,7 @@
                     </p>
                 </div> -->
                     
-                <div class="about-us-description">
+                <div class="about-us-description description-two">
                     <h3>A nossa missão e visão</h3>
                     <p>Sonhamos com um futuro entrelaçado com os ritmos da natureza, sustentabilidade e uma visão transcende simples práticas agrícolas. Inspirados pela beleza da nossa horta, vemos que prospera sob os princípios da sustentabilidade e agricultura biodinâmica.</p>
                     <p>Imaginamos um mundo onde a Horta d'Ria sirva como um farol de esperança, de forma a exibir as dádivas da natureza nutridas através de métodos orgânicos, cujo compromisso com o cultivo de produtos naturais decorre de uma crença profunda na importância de preservar o planeta para as gerações futuras. Compreendemos que a saúde da terra é inseparável do bem-estar de todos os seres vivos que a habitam.</p>
