fix spelling errors

--- a/html/informations.html
+++ b/html/informations.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="disable-orders">
-                <h4>Ecomendas Indisponíveis</h4>
+                <h4>Encomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
@@ -103,7 +103,7 @@
         <div class="come-see-us">
             <h3>Encomendas</h3>
             <p> Só aceitamos encomendas de a 2ª a 4ª feira.
-                Pelo que tens até ás 23:59h de cada 4ªa feira para a fazeres.
+                Pelo que tens até às 23:59h de cada 4ª feira para a fazer.
                 Caso não consigas fazer a tua encomenda dentro desse tempo, por favor, 
                 entra em contacto connosco.   
             </p>
@@ -118,7 +118,7 @@
                 Teremos todo o gosto em receber-te, apresentar-te os nossos produtos da 
                 semana e falar-te um pouco sobre a nossa horta.
                 <br>
-                Poderás ver com os teus prórprios olhos a qualidade dos nossos produtos 
+                Poderás ver com os teus próprios olhos a qualidade dos nossos produtos 
                 100% naturais.
                 <br>
                 O convite está feito. Esperámos por ti!
