--- a/html/produtos.html
+++ b/html/produtos.html
@@ -44,7 +44,7 @@ no<!DOCTYPE html>
             </div>
 
             <div class="disable-orders">
-                <h4>Ecomendas Indisponíveis</h4>
+                <h4>Encomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
