--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="disable-orders">
-                <h4>Ecomendas Indisponíveis</h4>
+                <h4>Encomendas Indisponíveis</h4>
             </div>
             
             <div class="cart-and-menu">
