--- a/html/cabaz-tres.html
+++ b/html/cabaz-tres.html
@@ -66,7 +66,7 @@
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
-            <a href="#"> <li>Fotos</li></a>
+            <a href="/html/basketHistoric.html"> <li>Fotos</li></a>
            <a href="/html/videos.html"><li>Videos</li></a>
         </ul>
 
