--- a/html/saladas.html
+++ b/html/saladas.html
@@ -159,10 +159,11 @@
 
        
         <div class="webDevSp">
-            <a href="mailto:simaaoweb@gmail.com">
-                <p class="my-name"><span class="designBy">Created by </span>Simão Pedro</p>
+            <a href="https://portfoliosimaopedro.webdevsp.com/" target="_blank">
+                <p class="my-name"><span class="designBy">Developed by </span>simaoPedro</p>
             </a>
         </div>
+        
     </section>
 
 </body>
