fixx codigo postal error and re-style error message
only avaiable delivery's on the city of Famalicão: cp = 4760

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -129,7 +129,7 @@
                         <label for="cp">Código Postal<span class="required-input-icon">*</span></label>
                     </div>
                     <div class="cp-numbers">
-                        <input id="cp" type="number" name="CódigoPostalUm" required class="required">
+                        <input id="cp" type="number" name="CódigoPostalUm" required class="required" value="4760">
                         <input id="cP" type="number" name="CódigoPostalDois" required class="required">
                     </div>
                 </div>
