change colors and add more information to home page

--- a/html/informations.html
+++ b/html/informations.html
@@ -97,7 +97,7 @@
             </a>
         </div>
     </section>
-<!-- ================================================================ -->
+<!-- ===========================INFORMATIONS SECTION===================================== -->
     <section class="informations-sec">
        
         <div class="come-see-us">
