--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="stylesheet/cabaz.css">
     <link rel="stylesheet" href="stylesheet/bottomMenu.css">
     <link rel="stylesheet" href="stylesheet/informations.css"
-    <!-- <link rel="stylesheet" href="stylesheet/produtos.css"> -->
+    <link rel="stylesheet" href="stylesheet/produtos.css">
     <link rel="stylesheet" href="stylesheet/contacts.css">
     <link rel="stylesheet" href="stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/testemunhos.css">
