fix laptop web design

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -61,7 +61,7 @@
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
         <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
-        <a href="\index.html"> <li>Cabazes</li></a>
+        <a href="/index.html#cabazesMenu"> <li>Cabazes</li></a>
         <a href="/html/produtos.html"> <li>Produtos</li></a>
         <a href="/html/form.html"> <li>Contactos</li></a>
         <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
@@ -207,7 +207,7 @@
             </div>
     
             <div class="footer-end">
-                <a href="/index.html"><p>Cabazes</p></a>
+                <a href="/index.html#cabazesMenu"><p>Cabazes</p></a>
                 <a href="/html/produtos.html"><p>Produtos</p></a>
                 <a href="https://maps.app.goo.gl/ZR7CWSfpoNfkTDMD9" target="_blank"><p>Morada</p></a>
                 <a href="/html/aboutUs.html"><p>Sobre Nós</p></a>
