--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -65,6 +65,7 @@
         <a href="/index.html#cabazesMenu"> <li>Cabazes</li></a>
         <a href="/html/produtos.html"> <li>Produtos</li></a>
         <a href="/html/form.html"> <li>Contactos</li></a>
+        <a href="/html/informations.html"> <li>Informações</li></a>
         <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
         <a href="/html/basketHistoric.html"> <li>Fotos</li></a>
         <a href="/html/videos.html"><li>Videos</li></a>
