Added 2 new sections/familys
added compotas and cogumelos html and js files.

fix some prices and change title names

--- a/html/cogumelos.html
+++ b/html/cogumelos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Horticulas | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, horticulas">
+    <meta name="description" content="Saladas | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, saladas horta da ria">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
@@ -17,13 +17,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
-    <script type="text/javascript" src="/scriptDocs/horticulas.js" defer></script>
+    <script type="text/javascript" src="/scriptDocs/cogumelos.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script type="text/javascript" src="/script.js" defer></script>
 
 
-
-    <title>Horticulas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
+    <title>Saladas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
     <link rel="icon" type="image/png" href="/images/HR_logo.png">
 
 
@@ -101,8 +100,8 @@
     <div class="alert"></div>
 
     <!-- watch js document -->
-    <section class="horticulas">
-        <h4 class="section-title">Horticulas de fruto</h4>
+    <section class="cogumelos">
+        <h4 class="section-title">cogumelos</h4>
     </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
@@ -163,6 +162,6 @@
         </div>
         
     </section>
-    
+
 </body>
 </html>
