--- a/html/produtos.html
+++ b/html/produtos.html
@@ -128,7 +128,7 @@ no<!DOCTYPE html>
             <div class="verduras-folhas photo-div-product">
                 <a href="/html/verduras.html">
                     <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
-                    <p>Verduras</p>
+                    <p>Couves e Folhas</p>
                 </a>
             </div>
 
@@ -177,7 +177,21 @@ no<!DOCTYPE html>
             <div class="horticolas-frio photo-div-product">
                 <a href="/html/horticulas.html">
                     <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
-                    <p>Horticolas</p>
+                    <p>Horticolas de fruto</p>
+                </a>
+            </div>
+
+            <div class="horticolas-frio photo-div-product">
+                <a href="/html/compotas.html">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <p>Compotas</p>
+                </a>
+            </div>
+
+            <div class="horticolas-frio photo-div-product">
+                <a href="/html/cogumelos.html">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <p>Cogumelos</p>
                 </a>
             </div>
 
