--- a/html/verduras.html
+++ b/html/verduras.html
@@ -103,7 +103,7 @@
 
     <!-- watch js document -->
     <section class="verduras">
-        <h4 class="section-title">verduras</h4>
+        <h4 class="section-title">Couves e folhas</h4>
     </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
