change testimonials display on index.html to flex

--- a/index.html
+++ b/index.html
@@ -307,8 +307,9 @@
 
 
         <!-- TESTIMONIAL -->
-        <section class="testimonials">
-            <h3 class="section-title-testimonial">Testemunhos</h3>
+        <h3 class="section-title-testimonial">Testemunhos</h3>
+
+        <section class="testimonials testimonials-flex">
         </section>
 
         
