test a.href tel:

--- a/html/cogumelos.html
+++ b/html/cogumelos.html
@@ -131,7 +131,7 @@
         </div>
 
         <div class="contact social-media">
-            <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
+            <a class="call-button" href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
             <div class="info-tel">
                 <span class="call-cost">914 547 465</span>
                 <span class="call-cost">Custo chamada nacional</span>
