--- a/html/informations.html
+++ b/html/informations.html
@@ -197,7 +197,7 @@
         </div>
 
         <div class="contact social-media">
-            <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
+            <a href="tel:00351914547465"><i class="fa-solid fa-phone"></i></a>
             <div class="info-tel">
                 <span class="call-cost">914 547 465</span>
                 <span class="call-cost">Custo chamada nacional</span>
