changed menu-list on navbar and testimonials on index.html

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     
            
             <div class="webDevSp">
-                <a href="mailto:simaaoweb@gmail.com">
+                <a href="https://portfoliosimaopedro.webdevsp.com/">
                     <p class="my-name"><span class="designBy">Created by </span>Simão Pedro</p>
                 </a>
             </div>
