added new section called fruta da epoca and added new items and photos

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -110,6 +110,13 @@ no<!DOCTYPE html>
             <div class="title-div">
                 <h1>Cria o teu Cabaz</h1>
             </div>
+
+            <div class="frutaDaEpoca photo-div-product" >
+                <a href="/html/frutaDaEpoca.html">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <p>Fruta da Época</p>
+                </a>
+            </div>
             
             <div class="ervas-cha photo-div-product" >
                 <a href="/html/ervasECha.html">
