--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -119,13 +119,13 @@
                 <div class="about-us-description">
                     <h3>Quem somos nós?</h3>
                     <p>
-                        Eu sou o Tiago, nascido em 87 sou natural de Vila Nova de Famalicão. Sou formado e pós-graduado em artes e design de joalharia. 
+                        Eu sou o Tiago, nascido em 87 e natural de Vila Nova de Famalicão. Sou formado e pós-graduado em artes e design de joalharia. 
                         Exerci essa profissão uns anos, até que comecei a ganhar mais interesse e gosto pela natureza. Esse gosto fez com que eu fosse 
                         capaz de produzir a minha própria comida. O que começou como um hooby, surge em 2020 como a horta d'Ria, um projecto pequeno em 
                         tamanho mas grande em qualidade e vontade em estarmos constantemente a aprender.
                     </p>
                     <p>
-                        Eu sou o Francisco nascido em 89, natural de Vila Nova de Famalicão. Tirei o curso técnico de informática no 12º ano e já há 
+                        Eu sou o Francisco nascido em 89 e natural de Vila Nova de Famalicão. Tirei o curso técnico de informática no 12º ano e já há 
                         15 anos que faço reparações numa empresa. O gosto pela agricultura surge em março de 2021 quando começei a ajudar o Tiago aos fins de semana. 
                         Mais tarde, para dedicar mais tempo à horta, passei de full-time para part-time, na empresa onde era técnico de informática. Com essa mudança 
                         consegui atingir o objectivo de produzir a minha propria comida, aumentar o contacto com a natureza e por sua vez um estilo de vida mais saudável.
